@@ -128,6 +128,8 @@ COLOR_WHITE = Color('#FFFFFF')
 COLOR_TRANSPARENT = Color('#FFFFFF', alpha=0.0)
 COLOR_PANEL_GREY = Color('#C0C0C0')
 COLOR_SELECTION_GREY = Color('#A6A6A6')
+COLOR_TOOLBAR_GREY = Color('#404040')
+COLOR_BUTTON_GREY = Color('#808080')
 COLOR_INACTIVE_FILL = Color('#9D9FA1')
 COLOR_INACTIVE_STROKE = Color('#757575')
 
