@@ -1,3 +1,4 @@
+* #2669: Add a border to the inner of the frame. (marco)
 * #2703: Update macedonian translation. (ArangelAngov)
 * #2543: Offer multiple activities for opening clipboard objects.
 
